<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="upload_post">Upload Post</string>
    <string name="select_image">Select Image\t\t\t</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_video">Video Upload</string>
    <string name="select_video">Select Video\n</string>
</resources>